--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Permiso para notificaciones en Android 13+ (API 33+) -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
+    <!-- Permiso para vibración en notificaciones -->
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
+    <!-- Permiso para usar el servicio de alarmas exactas (opcional) -->
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+
+    <!-- Permiso para mantener el dispositivo despierto (opcional) -->
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
     <application
         android:label="challenge_channels"
         android:name="${applicationName}"
